# ccminer-xevan

./: Makefile.am  README.md  README.txt  algos.h  api.cpp  bench.cpp  bignum.cpp  build.sh  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  configure.sh  cpuminer-config.h  cpuminer-config.h.in  cuda.cpp  cuda_checkhash.cu  cuda_helper.h  cuda_myriadgroestl.cu  cuda_myriadgroestl.cu~  cuda_vectors.h  miner.h  myriadgroestl.cu  nvapi.cpp  nvml.cpp  nvml.h  pools.cpp  sia.cu  start.sh  test  test.c  util.cpp
Algo256/: blake256_14round.cu  blake256_8round.cu  cuda_blake256_14round.cu  cuda_blake2s.cu  cuda_bmw256.cu  cuda_cubehash256.cu  cuda_groestl256.cu  cuda_keccak256.cu  cuda_skein256.cu  decred.cu  keccak256.cu
lbry/: cuda_lbry_merged.cu  cuda_sha256_lbry.cu  cuda_sha512_lbry.cu  lbry.cu
lyra2/: cuda_lyra2.cu  cuda_lyra2_sm5.cuh  cuda_lyra2v2.cu  lyra2RE.cu  lyra2REv2.cu
neoscrypt/: cuda_neoscrypt.cu  neoscrypt.cu
nist5/: cuda_nist5.cu
quark/: .cuda_bmw512.cu.swp  cuda_bmw512.cu  cuda_keccak_skein512.cu  cuda_quark.h  cuda_quark_blake512.cu  cuda_quark_compactionTest.cu  cuda_quark_groestl512.cu  cuda_quark_jh512.cu  cuda_quark_keccak512.cu  cuda_quark_skein512.cu  cuda_quark_skein512.cu~  groestl_functions_quad.h  groestl_transf_quad.h  quarkcoin.cu
qubit/: qubit.cu  qubit_luffa512.cu  qubit_luffa512.cu~
res/: ccminer.rc
skein/: skein.cu  skein2.cu  skein_header.h
sph/: blake2s.c  haval_helper.c  sha256_Y.c  whirlpool.c  yescrypt-opt.c  yescrypt-simd.c  yescrypt.h  yescryptcommon.c
streebog/: cuda_keccak_streebog.cu  cuda_keccak_streebog.cu~  cuda_streebog.cu  sib.cu  streebog_arrays.cuh  veltor.cu
x11/: c11.cu  cuda_x11.h  cuda_x11_aes.cuh  cuda_x11_cubehash512.cu  cuda_x11_cubehash_shavite_512.cu  cuda_x11_echo.cu  cuda_x11_shavite512.cu  cuda_x11_simd512.cu  cuda_x11_simd512.cu~  cuda_x11_simd512_func.cuh  cuda_x11_simd_echo512.cu  x11.cu  x11evo.cu
x13/: cuda_x13_fugue512.cu  cuda_x13_hamsi512.cu  cuda_x13_hamsi_fugue512.cu  x13.cu
x14/: cuda_x14_shabal512.cu  x14.cu
x15/: cuda_whirlpool_tables.cuh  cuda_whirlpoolx.cu  cuda_x15_whirlpool.cu  whirlpool.cu  whirlpoolx.cu  x15.cu
x17/: cuda_x17_haval256.cu  cuda_x17_haval256.cu~  cuda_x17_sha512.cu  x17.cu  x17.cu~
yescrypt/: cuda_yescrypt.cu  yescrypt.cu
